overflow-x to prevent from scrolling horizontally

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   min-height: 100vh;
   min-width: 300px;
+  overflow-x: hidden;
 }
 
 .flex {
